deployments/infrastructure/observability/victoria-logs/victoria-logs-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: victoria-logs-basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: loki-basic-auth
