deployments/infrastructure/observability/victoria-logs/victoria-logs-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-push
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "loki.talos-cluster.local.obleey.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /insert/loki/api/v1/push
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: victoria-logs-basic-auth
      backendRefs:
        - name: vlogs-victoria-logs-single-server
          port: 9428
